<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_total_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/filter_chips_background"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Total Expenses"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total_espenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RS 50.36"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_total" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_new_category_create"
        style="@style/CustomButtonStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_add_24"
        android:text="+"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/container_total_expense"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        android:text="+"
        android:textSize="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_new_category_create"
        app:layout_constraintEnd_toEndOf="@+id/btn_new_category_create"
        app:layout_constraintStart_toStartOf="@+id/btn_new_category_create"
        app:layout_constraintTop_toTopOf="@+id/btn_new_category_create" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_total_expense"
        tools:listitem="@layout/item_category" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_expenses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_categories"
        tools:listitem="@layout/item_expense" />

    <LinearLayout
        android:id="@+id/ll_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_empty_category_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_empty_category_description"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/add_category" />

        <Button
            android:id="@+id/btn_create_empty"
            style="@style/CustomButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_empty_expense"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="No expenses found!"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Please create a new one"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/add_task" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_new_expense"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/terracotta"
        android:src="@drawable/ic_baseline_add_24"
        android:textColor="@color/white"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>