<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_expense_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_info_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Description"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tie_expense_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Expense name :  Internet"
        android:minHeight="30dp" />


    <TextView
        android:id="@+id/tv_info_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Price"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tie_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Price : RS 50,00"
        android:inputType="numberDecimal"
        android:minHeight="30dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Choose a category "
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_recyclerView_list"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/item_category"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Select a color"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:textStyle="bold" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:columnCount="7"
        android:rowCount="3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/blue_Button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/color_blue" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/purpleButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/color_purple" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/blackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/color_black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/redButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/color_red" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/greenButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/color_green" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yellowButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/color_yellow" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/grayButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/color_gray" />

    </GridLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_expense_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/terracotta"
            android:text="@string/delete"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_expense_create_or_updata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/terracotta"
            android:text="@string/create"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>